datepicker z-index fix

--- a/gmxApplication.css
+++ b/gmxApplication.css
@@ -1,3 +1,5 @@
+.gmxApplication { z-index: 5; /* less than ui-datepicker's (8) */ }
+
 .gmxApplication-rootContainer { position: relative; width: 100%; height: 100%; }
 .gmxApplication-mapContainer { position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; transition: opacity .5s ease; opacity: 1; }
 
